<resources>
    <string name="app_name">Mars Explorer</string>
    <string name="no_weather">--</string>
    <string name="loading_weather">...</string>
    <string name="no_internet">Check your internet connection and try again.</string>

    <!-- Main Activity -->
    <string name="main_sol">SOL </string>
    <string name="current_weather_statement">CURRENT CONDITIONS ON MARS</string>
    <string name="maximum_temperature">Max Temperature: </string>
    <string name="minimum_temperature">Min Temperature: </string>
    <string name="atmospheric_pressure">Atmospheric Pressure: </string>
    <string name="roverImageTransition">roverImageTransition</string>

    <!-- Rover Explorer -->
    <string name="no_photos_message">Nothing to show :(</string>
    <string name="something_went_wrong_message">Something went wrong. Swipe down to try again.</string>
    <string name="expandImageTransition">expandImageTransition</string>
    <string name="imageHasLoaded">loaded</string>
    <string name="about_rover">About this Rover</string>

    <!-- About Activity -->
    <string name="about">About</string>
    <string name="version_title">Version</string>
    <string name="credits_title">Credits</string>
    <string name="credits_sub_title">Stuff that keeps Mars Explorer running.</string>
    <string name="github_title">Github</string>
    <string name="github_sub_title">Mars Explorer is a free and open source app. Find it on Github.</string>
    <string name="developer_title">Developed and maintained by</string>
    <string name="developer_sub_title">Kartikey Kushwaha</string>
    <string name="developer_sub_title_two">krtkush.github.io</string>
    <string name="share">Share this page.</string>
</resources>
